--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>javaee-api</artifactId>
             <version>${jakartaee}</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun.mail</groupId>
+                    <artifactId>javax.mail</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>        
         <dependency>
             <groupId>mysql</groupId>
@@ -44,19 +50,12 @@
             <artifactId>jasypt</artifactId>
             <version>1.9.3</version>
             <scope>compile</scope>
-        </dependency>
-        <!--<dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4.7</version>
-        </dependency>-->
-        
-        <!-- https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
-        <!--<dependency>
+        </dependency>        
+        <dependency>
             <groupId>com.sun.mail</groupId>
-            <artifactId>jakarta.mail</artifactId>
-            <version>1.6.4</version>
-        </dependency>-->
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>       
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
@@ -67,12 +66,9 @@
             <artifactId>standard</artifactId>
             <version>1.1.2</version>
         </dependency>
-
     </dependencies>
     
-    
-    
-     <build>
+    <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
